--- a/css/layout.css
+++ b/css/layout.css
@@ -2,11 +2,11 @@
 		position: relative;
 		margin: 0 auto;
 		width: 100%;
-		padding: 120px 0 160px 0;
-		padding: 12rem 0 16rem 0;
-		height: 40rem;
+		padding: 100px 0 200px 0;
+		padding: 10rem 0 20rem 0;
+		height: 500px;
+		height: 50rem;
 		display: block;
-		overflow: hidden;
 	}
 	.align-left { text-align: left; }
 	.align-right { text-align: right; }
@@ -28,7 +28,13 @@
 	#updates img:hover { margin-top: -10px; transition: 200ms ease; }
 	#updates div.sixteen.columns { z-index: 100; position: relative;}
 	
-	#portfolio { background-color: #ccc; color: #fff; }
+	#portfolio { background-color: #ccc; color: #fff; padding: 0; height: 680px; height: 68rem; }
+	#portfolio a { text-decoration: none; border-bottom: none; font-size: 0; }
+	#portfolio .item {width: 50%; height: 20%; display: inline-block !important; text-align: center; transition: opacity .25s ease-in-out; -moz-transition: opacity .25s ease-in-out; -webkit-transition: opacity .25s ease-in-out; z-index: 1; /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=85)"; /* IE 5-7 */ filter: alpha(opacity=85); /* Netscape */ -moz-opacity: 0.85; /* Safari 1.x */ -khtml-opacity: 0.85; /* Good browsers */ opacity: 0.85;}
+	#portfolio .item:hover { /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; /* IE 5-7 */ filter: alpha(opacity=100); /* Netscape */ -moz-opacity: 1.0; /* Safari 1.x */ -khtml-opacity: 1.0; /* Good browsers */ opacity: 1.0; cursor: pointer; }
+	#labelgearsolid, #courtship, #lgn {background-size: cover; background-position:center center;}
+	#labelgearsolid {background-image: url('../images/header-label-gear-solid.png')}
+	
 	
 	#contact { background-color: #fffcf5; }
 	#contact h3 { font-size:60px;font-size:6rem }
@@ -237,6 +243,21 @@
 		color: #ef4723;
 	}
 	
+	#tarpits, #capitalist { display:none; padding: 30px; background: #FFF; box-shadow: 0px 0px 4px rgba(0,0,0,0.7); -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.7); -moz-box-shadow: 0 0px 4px rgba(0,0,0,0.7); max-width: 85%; }
+	
+	#tarpits img, #capitalist img { width: 100%; }
+	
+	#lean_overlay {
+    position: fixed;
+    z-index:10000;
+    top: 0px;
+    left: 0px;
+    height:100%;
+    width:100%;
+    background: #000;
+    display: none;
+	}
+	
 	@media screen and (max-height: 31.125em) {
 		.bt-menu ul li a:before {
 			font-size: 32px;
@@ -273,32 +294,17 @@
 		html {
 			font-size: 9px;
 		}
-		.slide {
-		padding: 160px 0;
-		padding: 16rem 0;
-		height: 52rem;
-		}
 	}
 		
 	@media (max-width: 1040px) {
 		html {
 			font-size: 8px;
 		}
-		.slide {
-		padding: 160px 0;
-		padding: 16rem 0;
-		height: 52rem;
-		}
 	}
 		
 	@media (max-width: 960px) {
 		html {
 			font-size: 7px;
-		}
-		.slide {
-		padding: 50px 0 100px 0;
-		padding: 5rem 0 10rem 0;
-		height: 60rem;
 		}
 	}
 
@@ -316,6 +322,7 @@
 		margin: 0 auto;
 		width: 100%;
 		padding: 40px 20px;
+		padding: 4rem 2rem;
 		overflow: auto;
 		height: auto;
 		-webkit-box-sizing: border-box;
@@ -326,6 +333,10 @@
 		.center-if-mobile {text-align:center;}
 		
 		#fds div { opacity: 1; }
+		
+		#portfolio { padding: 0; height: auto; background-color: #fff; }
+		#portfolio .item {width: 100%; height: 200px; text-align: center; transition: all .5s; -webkit-transition: all .5s; z-index: 1;}
+		#portfolio .item:hover {background-color: rgba(0,0,0,0.5);}
 		
 		body {
 		font-family: "ff-meta-web-pro", "Helvetica", serif;
@@ -342,10 +353,13 @@
 		h5 { font-size: 21px; line-height: 30px; margin-bottom: 4px; }
 		h6 { font-size: 17px; line-height: 24px; }
 		
-		.wf-active p { visibility: visible; font-size: 24px; margin: 0 0 20px 0; line-height: 1.5; }
+		.wf-active p { visibility: visible; }
+		p { font-size: 24px; margin: 0 0 20px 0; line-height: 1.5; }
 		p.lead { font-size: 46px; line-height: 2.5; font-weight: 800;  }
 		
 		.lspaced-5, .lspaced-10, .wspaced-10 { letter-spacing: 0; word-spacing: 0; }
+		
+		#tarpits, #capitalist { width: 85%; padding: 10px; }
 
 
 	}
