--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -21,7 +21,7 @@
 /* #Base 960 Grid
 ================================================== */
 
-    .container                                  { position: relative; width:100%; max-width: 100%; margin: 0 auto; padding: 0; }
+    .container                                  { position: relative; width:100%; max-width: 100%; height: 100%; margin: 0 auto; padding: 0; z-index: 0;}
     .container .column,
     .container .columns                         { float: left; display: inline; margin-left: 1.041666666666667%; margin-right: 1.041666666666667%; }
     .row                                        { margin-bottom: 4.166666666666667%; }
