--- a/css/layout.css
+++ b/css/layout.css
@@ -321,10 +321,11 @@
 		top: 0 !important;
 		margin: 0 auto;
 		width: 100%;
-		padding: 40px 20px;
-		padding: 4rem 2rem;
-		overflow: auto;
-		height: auto;
+		overflow: hidden;
+		height: auto !important;
+		padding: 100px 15px 200px 15px;
+		padding: 10rem 1.5rem 20rem 1.5rem;
+		min-height: 100%;
 		-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
