--- a/css/layout.css
+++ b/css/layout.css
@@ -21,24 +21,32 @@
 	#fds a.contact p { float: left; margin-right: 40px; margin-right: 4rem; font-size: 20px; font-size: 2.0rem;}
 	.nav-button:hover img { margin-top: 3px; margin-top: 0.3rem; transition: 200ms ease; }
 	
-	#about { background-color: #7cc1a6; color: #fff; padding: 50px 0 50px 0; padding: 5rem 0 5rem 0;}
+	#about { background-color: #7cc1a6; color: #fff; padding-top: 65px; padding-top: 6.5rem;}
 	#about a, #about a:visited { color: #fff; }
+	img#me-full { height: 100%; width: auto; vertical-align: bottom; }
 	#about a:hover { color: #ef4723;}
 		
 	#updates { background-color: #9cedff; color: #0084a1; }
 	#updates a, #updates a:visited { color: #0084a1; }
 	#updates a:hover { color: #ef4723; }
-	#updates img:hover { margin-top: -10px; transition: 200ms ease; }
+	#updates img { transition: 400ms ease; }
+	#updates img:hover { margin-top: -40px; }
 	#updates div.sixteen.columns { z-index: 100; position: relative;}
 	
 	#portfolio { background-color: #ccc; color: #fff; padding: 0; height: 680px; height: 68rem; }
 	#portfolio a { text-decoration: none; border-bottom: none; font-size: 0; }
 	#portfolio .item {width: 50%; height: 20%; display: inline-block !important; text-align: center; transition: opacity .25s ease-in-out; -moz-transition: opacity .25s ease-in-out; -webkit-transition: opacity .25s ease-in-out; z-index: 1; /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=85)"; /* IE 5-7 */ filter: alpha(opacity=85); /* Netscape */ -moz-opacity: 0.85; /* Safari 1.x */ -khtml-opacity: 0.85; /* Good browsers */ opacity: 0.85;}
 	#portfolio .item:hover { /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; /* IE 5-7 */ filter: alpha(opacity=100); /* Netscape */ -moz-opacity: 1.0; /* Safari 1.x */ -khtml-opacity: 1.0; /* Good browsers */ opacity: 1.0; cursor: pointer; }
-	#labelgearsolid, #courtship, #lgn {background-size: cover; background-position:center center;}
+	.item {background-size: cover; background-position:center center;}
 	#labelgearsolid {background-image: url('../images/header-label-gear-solid.png')}
-	
-	
+	#lgn {background-image: url('../images/header-lgn.png')}
+	#xenos {background-image: url('../images/header-xenos.png')}
+	#quandary {background-image: url('../images/header-quandary.png')}
+	#unaoc {background-image: url('../images/header-createunaoc.png')}
+	#courtship {background-image: url('../images/header-courtship.png')}
+	#simondene {background-image: url('../images/header-simondene.png')}
+	#twentyonecb {background-image: url('../images/header-21cb.png')}
+		
 	#contact { background-color: #fffcf5; }
 	#contact h3 { font-size:60px; font-size:6rem }
 	#contact a, #contact a:visited { color: #e3e0db; }
@@ -56,8 +64,8 @@
 		z-index: 0;
 	}
 	
-	.far-clouds { background: transparent url(../images/far-clouds.svg) 305px 322px repeat-x; }
-	.near-clouds { background: transparent url(../images/near-clouds.svg) 305px 402px repeat-x; }
+	.far-clouds { background: transparent url(../images/far-clouds.svg) 305px 422px repeat-x; }
+	.near-clouds { background: transparent url(../images/near-clouds.svg) 305px 512px repeat-x; }
 	
 		#bt-menu,
 	#bt-menu:after,
@@ -337,6 +345,11 @@
 		.center-if-mobile {text-align:center;}
 		
 		#fds div { opacity: 1; }
+		
+		#updates { padding-bottom: 40px; padding-bottom: 4rem; }
+		#updates img:hover { margin-top: 0; }
+		.far-clouds { background: transparent url(../images/far-clouds.svg) 305px 600px repeat-x; }
+		.near-clouds { background: transparent url(../images/near-clouds.svg) 305px 700px repeat-x; }
 		
 		#portfolio { padding: 0; height: auto; background-color: #fff; }
 		#portfolio .item {width: 100%; height: 200px; text-align: center; transition: all .5s; -webkit-transition: all .5s; z-index: 1;}
