--- a/css/layout.css
+++ b/css/layout.css
@@ -35,7 +35,7 @@
 	
 	#portfolio { background-color: #ccc; color: #fff; padding: 0; height: 680px; height: 68rem; }
 	#portfolio a { text-decoration: none; border-bottom: none; font-size: 0; }
-	#portfolio .item {width: 50%; height: 20%; display: inline-block !important; text-align: center; transition: opacity .25s ease-in-out; -moz-transition: opacity .25s ease-in-out; -webkit-transition: opacity .25s ease-in-out; z-index: 1; /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=85)"; /* IE 5-7 */ filter: alpha(opacity=85); /* Netscape */ -moz-opacity: 0.85; /* Safari 1.x */ -khtml-opacity: 0.85; /* Good browsers */ opacity: 0.85;}
+	#portfolio .item {width: 50%; height: 25%; display: inline-block !important; text-align: center; transition: opacity .25s ease-out; -moz-transition: opacity .25s ease-out; -webkit-transition: opacity .25s ease-out; z-index: 1; /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=85)"; /* IE 5-7 */ filter: alpha(opacity=85); /* Netscape */ -moz-opacity: 0.85; /* Safari 1.x */ -khtml-opacity: 0.85; /* Good browsers */ opacity: 0.85;}
 	#portfolio .item:hover { /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; /* IE 5-7 */ filter: alpha(opacity=100); /* Netscape */ -moz-opacity: 1.0; /* Safari 1.x */ -khtml-opacity: 1.0; /* Good browsers */ opacity: 1.0; cursor: pointer; }
 	.item {background-size: cover; background-position:center center;}
 	#labelgearsolid {background-image: url('../images/header-label-gear-solid.png')}
@@ -348,6 +348,7 @@
 		
 		#updates { padding-bottom: 40px; padding-bottom: 4rem; }
 		#updates img:hover { margin-top: 0; }
+		#updates img { max-height: 400px; width: auto; }
 		.far-clouds { background: transparent url(../images/far-clouds.svg) 305px 600px repeat-x; }
 		.near-clouds { background: transparent url(../images/near-clouds.svg) 305px 700px repeat-x; }
 		
