--- a/css/layout.css
+++ b/css/layout.css
@@ -25,6 +25,7 @@
 	#about a, #about a:visited { color: #fff; }
 	img#me-full { height: 100%; width: auto; vertical-align: bottom; }
 	#about a:hover { color: #ef4723;}
+	#walking { width: 500px; height: 500px; margin: 30% 0 0 -30%; background: transparent url('../images/me-walking-sprites.png') 0 0 no-repeat; z-index: 9999; }
 		
 	#updates { background-color: #9cedff; color: #0084a1; }
 	#updates a, #updates a:visited { color: #0084a1; }
@@ -35,7 +36,7 @@
 	
 	#portfolio { background-color: #ccc; color: #fff; padding: 0; height: 680px; height: 68rem; }
 	#portfolio a { text-decoration: none; border-bottom: none; font-size: 0; }
-	#portfolio .item {width: 50%; height: 25%; display: inline-block !important; text-align: center; transition: opacity .25s ease-out; -moz-transition: opacity .25s ease-out; -webkit-transition: opacity .25s ease-out; z-index: 1; /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=85)"; /* IE 5-7 */ filter: alpha(opacity=85); /* Netscape */ -moz-opacity: 0.85; /* Safari 1.x */ -khtml-opacity: 0.85; /* Good browsers */ opacity: 0.85;}
+	#portfolio .item {width: 50%; height: 25%; display: inline-block !important; text-align: center; transition: opacity .25s ease-out; -moz-transition: opacity .25s ease-out; -webkit-transition: opacity .25s ease-out; z-index: 1; /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=85)"; /* IE 5-7 */ filter: alpha(opacity=85); /* Netscape */ -moz-opacity: 0.85; /* Safari 1.x */ -khtml-opacity: 0.85; /* Good browsers */ opacity: 0.85; -webkit-backface-visibility: hidden; position:relative; }
 	#portfolio .item:hover { /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; /* IE 5-7 */ filter: alpha(opacity=100); /* Netscape */ -moz-opacity: 1.0; /* Safari 1.x */ -khtml-opacity: 1.0; /* Good browsers */ opacity: 1.0; cursor: pointer; }
 	.item {background-size: cover; background-position:center center;}
 	#labelgearsolid {background-image: url('../images/header-label-gear-solid.png')}
@@ -64,8 +65,8 @@
 		z-index: 0;
 	}
 	
-	.far-clouds { background: transparent url(../images/far-clouds.svg) 305px 422px repeat-x; }
-	.near-clouds { background: transparent url(../images/near-clouds.svg) 305px 512px repeat-x; }
+	.far-clouds { background: transparent url(../images/far-clouds.svg) 305px 252px repeat-x; }
+	.near-clouds { background: transparent url(../images/near-clouds.svg) 305px 402px repeat-x; }
 	
 		#bt-menu,
 	#bt-menu:after,
@@ -320,7 +321,11 @@
 	}
 
 	/* Tablet Portrait size to standard 960 (devices and browsers) */
-	@media only screen and (min-width: 768px) and (max-width: 959px) {}
+	@media only screen and (min-width: 768px) and (max-width: 959px) {
+		
+		#walking {  margin: 0 0 0 -150px; width: 500px; height: 500px; }
+		
+	}
 
 	/* All Mobile Sizes (devices and browser) */
 	@media only screen and (max-width: 767px) {
@@ -351,6 +356,7 @@
 		#updates img { max-height: 400px; width: auto; }
 		.far-clouds { background: transparent url(../images/far-clouds.svg) 305px 600px repeat-x; }
 		.near-clouds { background: transparent url(../images/near-clouds.svg) 305px 700px repeat-x; }
+		#walking {  margin: 0; }
 		
 		#portfolio { padding: 0; height: auto; background-color: #fff; }
 		#portfolio .item {width: 100%; height: 200px; text-align: center; transition: all .5s; -webkit-transition: all .5s; z-index: 1;}
