Updated font sizes.

--- a/css/base.css
+++ b/css/base.css
@@ -78,7 +78,8 @@
 
 	.wf-loading p { visibility: hidden; }
 	.wf-active p { visibility: visible; }
-	p { font-size: 22px; font-size: 2.2rem; margin: 0 0 20px 0; line-height: 1.5; }
+	p { font-size: 20px; font-size: 2.0rem; margin: 0 0 20px 0; line-height: 1.3; }
+	p.lead { font-size: 28px; font-size: 2.8rem; }
 	p img { margin: 0; }
 
 	em { font-style: italic; }
@@ -100,8 +101,8 @@
 
 /* #Links
 ================================================== */
-	a, a:visited { color: #333; text-decoration: none; font-weight: bold; outline: 0; }
-	a:hover, a:focus { color: #ef4723; }
+	a, a:visited { color: #333; border-bottom: #333; outline: 0; }
+	a:hover, a:focus { color: #ef4723; border-bottom: none; }
 	p a, p a:visited { line-height: inherit; }
 
 
