--- a/css/base.css
+++ b/css/base.css
@@ -83,7 +83,7 @@
 	p img { margin: 0; }
 
 	em { font-style: italic; }
-	strong { font-weight: 700; color: #333; }
+	strong { font-weight: 700; }
 	small { font-size: 80%; }
 	.uppercase { text-transform:uppercase; }
 	.normal { font-weight: normal; }
