--- a/css/base.css
+++ b/css/base.css
@@ -67,9 +67,10 @@
 		font-weight: 800;
 		}
 	h4, h5, h6 {
-		font-family: "Ideal Sans A", "Ideal Sans B", "Helvetica", sans-serif;
+		font-family: "Verlag A", "Verlag B", "Helvetica", sans-serif;
 		font-weight: 800;
-		letter-spacing: 1px;
+		text-transform: uppercase;
+		letter-spacing: 2px;
 	}
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
 	h1 { font-size: 59px; font-size: 5.9rem; line-height: 1.0; }
@@ -84,7 +85,7 @@
 
 	.wf-loading p { visibility: hidden; }
 	.wf-active p { visibility: visible; }
-	p { font-size: 20px; font-size: 2.0rem; margin: 0 0 20px 0; line-height: 1.3; }
+	p { font-size: 14px; font-size: 1.4rem; margin: 0 0 20px 0; line-height: 1.6; letter-spacing: -1px;}
 	p.lead { font-size: 28px; font-size: 2.8rem; }
 	p img { margin: 0; }
 
