--- a/css/layout.css
+++ b/css/layout.css
@@ -22,14 +22,14 @@
 
 	header { position:absolute; left:0; right:0; margin-left:auto; margin-right:auto; width: 800px; text-align: center;}
 	header h1 { padding-top: 100px; }
-	header h6 { text-transform: uppercase; font-size: 22px; font-size: 2.2rem; }
+	header h6 { text-transform: uppercase; font-size: 22px; font-size: 2.2rem; color: #8e3223;}
 	
-	#about { background-color: #1c0806; color: #fff; padding-top: 65px; padding-top: 6.5rem;}
-	#about a, #about a:visited { color: #fff; border-bottom: #fff; }
-	img#me-full { height: 100%; width: auto; vertical-align: bottom; }
-	#about a:hover { color: #ef4723; border-bottom: #none; }
-	#walking { width: 500px; height: 500px; margin: 30% 0 0 -30%; background: transparent url('../images/me-walking-sprites.png') 0 0 no-repeat; z-index: 9999; }
-	#walking-mobile { display: none; max-width: 100px; }
+	#about { background-color: #1c0806; color: #ccc; padding-top: 30px; padding-top: 3.0rem;}
+	#about h6 { font-size: 24px; font-size: 2.4rem; display: inline-block; margin-bottom: 30px;}
+	#about span { font-family: 'Sentinel Ssm A', 'Sentinel Ssm B', Georgia, sans-serif; font-style: italic; text-transform: none; font-size: 16px; font-size: 1.6rem; padding-bottom: 10px;}
+	#about hr { width: 175px; border: solid 4px #fc2c22; margin-bottom: 40px; }
+	#about a, #about a:visited { color: #eee; text-decoration: none; padding-bottom: 2px; border-bottom: 1px solid #eee; }
+	#about a:hover {  }
 	
 	#portfolio { background-color: #ccc; color: #fff; padding: 0; height: 680px; height: 68rem; }
 	#portfolio a { text-decoration: none; border-bottom: none; font-size: 0; }
