--- a/css/layout.css
+++ b/css/layout.css
@@ -24,15 +24,17 @@
 	header h1 { padding-top: 100px; }
 	header h6 { text-transform: uppercase; font-size: 22px; font-size: 2.2rem; color: #d0512f;}
 	
-	#about { background-color: #1c0806; color: #ccc; padding-top: 30px; padding-top: 3.0rem;}
+	#about { background-color: #1c0806; color: #ccc; padding: 0; -webkit-transition: background-color 3s linear; -moz-transition: background-color 3s linear; -o-transition: background-color 3s linear; -ms-transition: background-color 3s linear; transition: background-color 3s linear; }
+	#about.scrolled { background-color: #f7f7f7; }
 	#about .circle { width: 60px; height: 60px; background: #f7f7f7; display: inline-block; margin-right: 5px; vertical-align: middle;}
 	#about .circle img { width: 70%; height: auto; }
+	#about .notice { position: absolute; right: 20px; top: 20px; background-color: #f7f7f7; padding: 5px 20px; border-radius: 30px; color: #333; }
 	#about h5 { display: inline-block; vertical-align: middle; margin-bottom: 0; margin-right: 5px;}
 	#about h6 { font-size: 24px; font-size: 2.4rem; display: inline-block; margin-bottom: 30px;}
 	#about div.button { padding: 10px; border: #ccc solid 3px; border-radius: 100px; vertical-align: middle; }
 	#about span { font-family: 'Sentinel Ssm A', 'Sentinel Ssm B', Georgia, sans-serif; font-style: italic; text-transform: none; vertical-align: top; margin: 0 5px;}
 	#about hr { width: 175px; border: solid 4px #d0512f; margin-bottom: 40px; }
-	#about a, #about a:visited { color: #eee; text-decoration: none; padding-bottom: 2px; border-bottom: 1px solid #eee; }
+	#about a, #about a:visited { font-weight: bold; color: #eee; text-decoration: none; padding-bottom: 2px; border-bottom: 1px solid #eee; }
 	#about a.button { padding: 0; border: none; }
 	#about a.button:hover div.button { background-color: #d0512f; border-color: #d0512f; color: #fff; -webkit-transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out}
 	#about .workplay, #about .workedplayed, #about .playwork { padding-bottom: none; border: none; }
@@ -60,10 +62,20 @@
 
 	#testimonial { }
 
-	#social { background-color: #f7f7f7; }
-	#social a { display: block; margin-bottom: 20px; text-decoration: none; }
-	#social i { margin-right: 30px; width: 10px; display: inline-block; }
-	#social a span { font-size: 12px; font-size: 1.2rem; text-decoration: none; border-bottom: none; display: inline-block; vertical-align: middle;}
+	#social { background-color: #f7f7f7; padding: 0; }
+	#social .favorite-things div { display: inline-block;}
+	#social .favorite-things i { margin-right: 10px; display: inline-block; vertical-align: middle; }
+	#social .favorite-things span { font-size: 16px; font-size: 1.6rem; display: inline-block; vertical-align: middle; margin-right: 50px;}
+	#social .social-icons a { display: block; margin-bottom: 20px; text-decoration: none; }
+	#social .social-icons i { margin-right: 30px; width: 10px; display: inline-block; vertical-align: middle; }
+	#social .social-icons a span { font-size: 12px; font-size: 1.2rem; text-decoration: none; border-bottom: none; display: inline-block; vertical-align: middle;}
+	#social .social-icons a:hover { color: #d0512f; }
+	#social hr { width: 80px; border: solid 4px #d0512f; margin-bottom: 30px; }
+	#social p.tweet:before { content: '“'; font-weight:bold; }
+	#social p.tweet:after { content: '”'; font-weight:bold; }
+	#social p.tweet { font-size: 12px; font-size: 1.2rem; font-style: italic; letter-spacing: 0; line-height: 1.6; color: #666;}
+	#social p.tweet a { font-weight: bold; text-decoration: none; padding-bottom: 2px; letter-spacing: 0; border-bottom: 1px solid #666; color: #666;}
+	#social p.tweet a:hover { border-bottom: 1px solid #d0512f; }
 		
 	#contact { background-color: #1c0806; }
 	#contact h3 { font-size:60px; font-size:6rem }
@@ -82,193 +94,6 @@
 		z-index: 0;
 	}
 	
-		#bt-menu,
-	#bt-menu:after,
-	#bt-menu::before {
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-	}
-	
-	.bt-menu {
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 0;
-		border-width: 0px;
-		border-style: solid;
-		border-color: #000;
-		background-color: rgba(0,0,0,0);
-		-webkit-backface-visibility: hidden;
-		-webkit-transition: border-width 0.3s, background-color 0.3s, height 0s 0.3s;
-		transition: border-width 0.3s, background-color 0.3s, height 0s 0.3s;
-	}
-	
-	.bt-menu.bt-menu-open {
-		height: 100%;
-		border-width: 0 0 0 90px;
-		background-color: rgba(0,0,0,0.3);
-		-webkit-transition: border-width 0.3s, background-color 0.3s;
-		transition: border-width 0.3s, background-color 0.3s;
-	}
-	
-	.bt-overlay {
-		position: absolute;
-		width: 100%;
-	}
-	
-	.bt-menu-open .bt-overlay {
-		height: 100%;
-	}
-	
-	.bt-menu-trigger {
-		position: fixed;
-		top: 15px;
-		left: 20px;
-		display: block;
-		width: 50px;
-		height: 50px;
-		cursor: pointer;
-	}
-	
-	.bt-menu-trigger span {
-		position: absolute;
-		top: 50%;
-		left: 0;
-		display: block;
-		width: 100%;
-		height: 6px;
-		margin-top: -2px;
-		background-color: #fff;
-		font-size: 0px;
-		-webkit-touch-callout: none;
-		-webkit-user-select: none;
-		-khtml-user-select: none;
-		-moz-user-select: none;
-		-ms-user-select: none;
-		user-select: none;
-		-webkit-transition: background-color 0.3s;
-		transition: background-color 0.3s;
-	}
-	
-	.bt-menu-open .bt-menu-trigger span {
-		background-color: transparent;
-	}
-	
-	.bt-menu-trigger span:before,
-	.bt-menu-trigger span:after {
-		position: absolute;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background: #fff;
-		content: '';
-		-webkit-transition: -webkit-transform 0.3s;
-		transition: transform 0.3s;
-	}
-	
-	.bt-menu-trigger span:before {
-		-webkit-transform: translateY(-250%);
-		transform: translateY(-250%);
-	}
-	
-	.bt-menu-trigger span:after {
-		-webkit-transform: translateY(250%);
-		transform: translateY(250%);
-	}
-	
-	.bt-menu-open .bt-menu-trigger span:before {
-		-webkit-transform: translateY(0) rotate(45deg);
-		transform: translateY(0) rotate(45deg);
-	}
-	
-	.bt-menu-open .bt-menu-trigger span:after {
-		-webkit-transform: translateY(0) rotate(-45deg);
-		transform: translateY(0) rotate(-45deg);
-	}
-	
-	.bt-menu ul {
-		position: fixed;
-		top: 75px;
-		left: 0;
-		margin: 0;
-		padding: 0;
-		width: 90px;
-		list-style: none;
-		-webkit-backface-visibility: hidden;
-		backface-visibility: hidden;
-	}
-	
-	.bt-menu ul li,
-	.bt-menu ul li a {
-		display: block;
-		width: 100%;
-		text-align: center;
-	}
-	
-	.bt-menu ul li {
-		padding: 16px 0;
-		opacity: 0;
-		visibility: hidden;
-		-webkit-transition: -webkit-transform 0.3s, opacity 0.2s, visibility 0s 0.3s;
-		transition: transform 0.3s, opacity 0.2s, visibility 0s 0.3s;
-	}
-	
-	.bt-menu ul li:first-child { 
-		-webkit-transform: translate3d(-100%,200%,0);
-		transform: translate3d(-100%,200%,0);
-	}
-	
-	.bt-menu ul li:nth-child(2) { 
-		-webkit-transform: translate3d(-100%,100%,0);
-		transform: translate3d(-100%,100%,0);
-	}
-	
-	.bt-menu ul li:nth-child(3) { 
-		-webkit-transform: translate3d(-100%,0,0);
-		transform: translate3d(-100%,0,0);
-	}
-	
-	.bt-menu ul li:nth-child(4) { 
-		-webkit-transform: translate3d(-100%,-100%,0);
-		transform: translate3d(-100%,-100%,0);
-	}
-	
-	.bt-menu ul li:nth-child(5) { 
-		-webkit-transform: translate3d(-100%,-200%,0);
-		transform: translate3d(-100%,-200%,0);
-	}
-	
-	.bt-menu.bt-menu-open ul li {
-		visibility: visible;
-		opacity: 1;
-		-webkit-transition: -webkit-transform 0.3s, opacity 0.3s 0.1s;
-		transition: transform 0.3s, opacity 0.3s;
-		-webkit-transform: translate3d(0,0,0);
-		transform: translate3d(0,0,0);
-	}
-	
-	.bt-menu ul li a {
-		display: block;
-		outline: none;
-		color: transparent;
-		text-decoration: none;
-		font-size: 0px;
-	}
-	
-	.bt-menu ul li a:before {
-		color: #fff;
-		font-size: 48px;
-		-webkit-transition: color 0.2s;
-		transition: color 0.2s;
-	}
-	
-	.bt-menu ul li a:hover:before,
-	.bt-menu ul li a:focus:before  {
-		color: #ef4723;
-	}
-	
 	#tarpits, #capitalist { display:none; padding: 30px; background: #FFF; box-shadow: 0px 0px 4px rgba(0,0,0,0.7); -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.7); -moz-box-shadow: 0 0px 4px rgba(0,0,0,0.7); max-width: 85%; }
 	
 	#tarpits img, #capitalist img { width: 100%; }
@@ -285,9 +110,6 @@
 	}
 	
 	@media screen and (max-height: 31.125em) {
-		.bt-menu ul li a:before {
-			font-size: 32px;
-		}
 	}
 
 /* #Page Styles
