--- a/css/parallax.css
+++ b/css/parallax.css
@@ -40,25 +40,67 @@
   transform: translateZ(-400px) scale(5); }
 
 .parallax__layer__1 {
-  transform: translateZ(-350px) scale(4.5); }
+  transform: translateZ(-350px) scale(4.5); 
+    animation-delay: 1.6s;
+    -webkit-animation-delay: 1.6s;
+    -moz-animation-delay: 1.6s;
+    -o-animation-delay: 1.6s;
+    -ms-animation-delay: 1.6s;
+}
 
 .parallax__layer__2 {
-  transform: translateZ(-300px) scale(4); }
+  transform: translateZ(-300px) scale(4); 
+    animation-delay: 1.5s;
+    -webkit-animation-delay: 1.5s;
+    -moz-animation-delay: 1.5s;
+    -o-animation-delay: 1.5s;
+    -ms-animation-delay: 1.5s;
+}
 
 .parallax__layer__3 {
-  transform: translateZ(-250px) scale(3.5); }
+  transform: translateZ(-250px) scale(3.5); 
+  animation-delay: 1.4s;
+    -webkit-animation-delay: 1.4s;
+    -moz-animation-delay: 1.4s;
+    -o-animation-delay: 1.4s;
+    -ms-animation-delay: 1.4s;
+}
 
 .parallax__layer__4 {
-  transform: translateZ(-200px) scale(3); }
+  transform: translateZ(-200px) scale(3); 
+  animation-delay: 1.3s;
+    -webkit-animation-delay: 1.3s;
+    -moz-animation-delay: 1.3s;
+    -o-animation-delay: 1.3s;
+    -ms-animation-delay: 1.3s;
+    }
 
 .parallax__layer__5 {
-  transform: translateZ(-150px) scale(2.5); }
+  transform: translateZ(-150px) scale(2.5); 
+  animation-delay: 1.2s;
+    -webkit-animation-delay: 1.2s;
+    -moz-animation-delay: 1.2s;
+    -o-animation-delay: 1.2s;
+    -ms-animation-delay: 1.2s;
+}
 
 .parallax__layer__6 {
-  transform: translateZ(-100px) scale(2); }
+  transform: translateZ(-100px) scale(2); 
+  animation-delay: 1.1s;
+    -webkit-animation-delay: 1.1s;
+    -moz-animation-delay: 1.1s;
+    -o-animation-delay: 1.1s;
+    -ms-animation-delay: 1.1s;
+}
 
 .parallax__layer__7 {
-  transform: translateZ(-50px) scale(1.5); }
+  transform: translateZ(-50px) scale(1.5); 
+  animation-delay: 1s;
+    -webkit-animation-delay: 1s;
+    -moz-animation-delay: 1s;
+    -o-animation-delay: 1s;
+    -ms-animation-delay: 1s;
+}
 
 .parallax__layer__8 {
   transform: translateZ(0px) scale(1); }
